# PB-assessment

./: .env.example  .gitignore  Makefile  README.md  netlify.env.example  netlify.toml  pyproject.toml  vitest.functions.config.mts
.github/workflows/: ci.yml  databricks.yml  deploy-production.yml  deploy-staging.yml  pr.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
data/sample/: listings.csv  training_frame.meta.json  (+1 more)
databricks/: databricks.yml
docs/: architecture.md  configuration.md  data_model.md  databricks-setup.md  deployment.md  enterprise-workflow.md  experiment_workflow.md  model_card.md  model_lifecycle.md  monitoring.md  security.md  testing.md
ml/: README.md  pyproject.toml
ml/config/: data.yaml  eda_lab.yaml  eda_lab_enterprise.yaml  quality_gates.yaml  quality_gates_ci.yaml  training.yaml
ml/src/house_price_ml/: __init__.py
ml/src/house_price_ml/config/: __init__.py  constants.py  eda_lab_config.py  mlflow_tracking.py  settings.py  training_config.py
ml/src/house_price_ml/data/: __init__.py  data_config.py  silver.py  synthetic.py  training_data.py  validation.py
ml/src/house_price_ml/evaluation/: __init__.py  ablation.py  explain.py  gate_config.py  gates.py  metrics.py  model_card.py  segments.py  splits.py
ml/src/house_price_ml/features/: aggregates.py  energy.py  geo.py  historical.py  pipeline.py
ml/src/house_price_ml/jobs/: __init__.py  databricks_train.py  eda_lab.py  experiment_lab.py
ml/src/house_price_ml/models/: baseline.py  train.py  tuning.py
ml/src/house_price_ml/monitoring/: builders.py  business.py  drift.py  serving.py
ml/src/house_price_ml/serving/: mlflow_model.py  pyfunc_model.py
ml/tests/: conftest.py
ml/tests/data/: test_schema.py  test_training_data.py
ml/tests/evaluation/: test_ablation.py
ml/tests/model/: test_regression.py  test_smoke.py
ml/tests/unit/: test_aggregates.py  test_databricks_train.py  test_eda_lab.py  test_experiment_lab.py  test_features.py  test_gates.py  test_historical_features.py  test_metrics.py  test_serving_metrics.py  test_train_config_artifact.py  test_train_register.py  test_train_table_versions.py  test_training_config.py
netlify/: vitest.functions.config.ts
scripts/: bootstrap-production.sh  build-training-export.py  cleanup-sample-predictions.sh  databricks-bundle-deploy.sh  databricks-ci.sh  databricks-init-catalog.py  databricks-init-catalog.sh  deploy-serving.py  deploy-serving.sh  dev-full.sh  dev-web.sh  fetch-serving-logs.py  netlify-build.sh  netlify-deploy.sh  promote-challenger.py  promote-champion.py  promote-to-production.py  recalibrate-synthetic-actuals.py  run-e2e-smoke.sh  seed-monitoring-demo.sh  seed-synthetic-history.py  setup-databricks-repo.sh  setup-github-branch-protection.sh  setup-netlify-previews.sh  setup-netlify-production.sh  synthetic_eval_calibration.py  upload-ml-wheel.sh  verify-databricks.sh  verify-inference.py  verify-inference.sh  wait-for-deploy.sh
tests/: conftest.py
(+64 files in other folders)
