[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "house-price-ml"
version = "0.1.0"
description = "House price prediction ML package for PB assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mlflow>=2.10",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pandas-stubs>=2.0",
]
tuning = [
    "optuna>=3.5",
]
analysis = [
    "shap>=0.44",
]

[tool.hatch.build.targets.wheel]
packages = ["src/house_price_ml"]

[tool.hatch.build.targets.wheel.force-include]
"config/training.yaml" = "house_price_ml/config/training.yaml"
"config/quality_gates.yaml" = "house_price_ml/config/quality_gates.yaml"
"config/data.yaml" = "house_price_ml/config/data.yaml"
"config/quality_gates_ci.yaml" = "house_price_ml/config/quality_gates_ci.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
